--- a/config/crd/bases/batch.tutorial.kubebuilder.io_cronjobs.yaml
+++ b/config/crd/bases/batch.tutorial.kubebuilder.io_cronjobs.yaml
@@ -13,6 +13,8 @@ spec:
     plural: cronjobs
     singular: cronjob
   scope: ""
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: CronJob is the Schema for the cronjobs API
